--- a/corpdata-biz/src/main/resources/templates/common/generator/Controller.java.vm
+++ b/corpdata-biz/src/main/resources/templates/common/generator/Controller.java.vm
@@ -14,6 +14,7 @@ import ${package}.service.${className}Service;
 import com.corpdata.common.domain.DataGridRequestDTO;
 import com.corpdata.common.result.Result;
 import com.corpdata.system.log.WebLog;
+import com.corpdata.core.base.BaseController;
 
 /**
  * ${comments}
@@ -25,7 +26,7 @@ import com.corpdata.system.log.WebLog;
  
 @Controller
 @RequestMapping("${pathName}")
-public class ${className}Controller{
+public class ${className}Controller extends BaseController{
 
 	@Autowired
 	private ${className}Service ${classname}Service;
@@ -37,6 +38,7 @@ public class ${className}Controller{
 	}
 	
 	//保存数据
+	@WebLog()
 	@ResponseBody
 	@RequestMapping("/save")
 	public Result save(${className} record){
@@ -51,6 +53,7 @@ public class ${className}Controller{
 	}
 	
 	//更新数据
+	@WebLog()
 	@ResponseBody
 	@RequestMapping("/update")
 	public Result update(${className} record){
@@ -58,6 +61,7 @@ public class ${className}Controller{
 	}
 	
 	//删除
+	@WebLog()
 	@ResponseBody
 	@PostMapping("/delete")
 	public Result delete(${pk.attrType} ${pk.attrname}){
@@ -65,6 +69,7 @@ public class ${className}Controller{
 	}
 	
 	//批量删除
+	@WebLog()
 	@ResponseBody
 	@PostMapping("/deletes")
 	public Result deletes(@RequestParam("ids[]") ${pk.attrType}[] ${pk.attrname}s){
