--- a/corpdata-biz/src/main/resources/templates/system/scheduler/job_add.html
+++ b/corpdata-biz/src/main/resources/templates/system/scheduler/job_add.html
@@ -4,17 +4,22 @@
 		<meta charset="UTF-8" />
 		<title>新增任务</title>
 		<div th:replace="common/common_form_header"></div>
+		<script type="text/javascript">
+			$(document).ready(function() {
+				initSelect("jobClassName","/system/scheduler/classjson","");
+			});
+		</script>
 	</head>
 <body>
 	<div class="building-details" id="building-details">
 	    <div class="layui-tab-content">
-			<form id="defaultForm" action="#" th:action="@{/system/scheduler/addjob}" th:method="post" >
+			<form id="defaultForm" action="#" th:action="@{/system/scheduler/save}" th:method="post" >
 				<div class="form-modal">
 					<div class="form-wrap clearfix">
 						<div class="col-md-6 col-sm-6 col-xs-6">
 							<div class="form-group">
 							    <label for="">任务名称</label>
-							    <input type="text" class="form-control" id="jobClassName" name="jobClassName" class="form-control"/>
+							    <input type="text" class="form-control" id="jobName" name="jobName" class="form-control"/>
 							</div>
 						</div>
 						<div class="col-md-6 col-sm-6 col-xs-6">
@@ -23,10 +28,22 @@
 							    <input type="text" name="jobGroupName" id="jobGroupName" class="form-control" placeholder="">
 							</div>
 						</div>
-						<div class="col-md-12 col-sm-12 col-xs-12">
+						<div class="col-md-4 col-sm-4 col-xs-4">
 							<div class="form-group">
 							    <label for="">表达式</label>
 							    <input type="text" class="form-control" id="cronExpression" name="cronExpression" class="form-control"/>
+							</div>
+						</div>
+						<div class="col-md-8 col-sm-8 col-xs-8">
+							<div class="form-group">
+							    <label for="">类名称</label>
+							    <select id="jobClassName" name="jobClassName" class="form-control selectpicker"></select>
+							</div>
+						</div>
+						<div class="col-md-12 col-sm-12 col-xs-12">
+							<div class="form-group">
+							    <label for="">任务描述</label>
+							    <input type="text" class="form-control" id="jobDescription" name="jobDescription" class="form-control"/>
 							</div>
 						</div>
 						<div class="col-md-6 col-sm-6 col-xs-6">
@@ -77,7 +94,7 @@ $(document).ready(function() {
             $.post($form.attr('action'), $form.serialize(), function(result) {
 				parent.layer.closeAll();
 				parent.layer.msg(result.msg);
-				parent.layui.table.reload('dg_role');
+				parent.layui.table.reload('datagrid');
             }, 'json');
             //alert($form.attr('action'));
             
