--- a/corpdata-biz/src/main/resources/templates/system/generate/table_list.html
+++ b/corpdata-biz/src/main/resources/templates/system/generate/table_list.html
@@ -48,14 +48,14 @@
 				    elem: '#datagrid',
 				    
 				    method:'post',
-				    cols: [[
+				    cols: [
 				      	{checkbox: true, fixed: true},
 			            {field:'tableName',title:'表名称',sort: true},
 			            {field:'tableComment',title:'说明'},
 						{field:'engine',title:'engine',width:100},
 						{field:'createTime',title:'createTime',width:200},
 						{fixed: 'right',title:'操作', width:178, align:'center', toolbar: '#toolBar'}
-				    ]]
+				    ]
 				    ,page: true
 				    ,height: 500
 				});
