--- a/corpdata-biz/src/main/resources/templates/system/org/dept/dept_list.html
+++ b/corpdata-biz/src/main/resources/templates/system/org/dept/dept_list.html
@@ -39,14 +39,14 @@
 				    elem: '#LAY_table_dept',
 				    url: '/system/org/dept/listdata',
 				    method:'post',
-				    cols: [[
+				    cols: [
 				      //{checkbox: true, fixed: true},
 				      {field:'foldername', title: '组织名称'}
 				      ,{field:'folderid', title: '层级编号',  sort: true}
 				      ,{field:'sortNumber', title: '排序'}
 				      ,{fixed: 'right', width:178, align:'center', toolbar: '#toolBar'}
 				      
-				    ]]
+				    ]
 				    ,page: true
 				    ,height: 450
 				});
