--- a/corpdata-biz/src/main/resources/templates/system/scheduler/job_list.html
+++ b/corpdata-biz/src/main/resources/templates/system/scheduler/job_list.html
@@ -59,7 +59,7 @@
 				    elem: '#LAY_datagrid',
 				    url: '/system/scheduler/listdata',
 				    method:'post',
-				    cols: [[
+				    cols: [
 				      {field:'jobName', align:'left', title: '任务名称'},
 				      {field:'jobGroup', align:'left', title: '分组',  sort: true},
 				      {field:'jobClassName', align:'center', title: '实现类'},
@@ -67,7 +67,7 @@
 				      {field:'triggerState', align:'center', title: '状态'},
 				      {field:'description', align:'center', title: '描述'},
 				      {fixed: 'right', width:200, align:'center', toolbar: '#toolBar'}
-				    ]]
+				    ]
 				    ,page: true
 				    ,height: 450
 				});
