--- a/corpdata-biz/src/main/resources/templates/system/dic/dic_list.html
+++ b/corpdata-biz/src/main/resources/templates/system/dic/dic_list.html
@@ -72,14 +72,14 @@
 					elem: '#LAY_table_user',
 				    url: '/system/data-dic/listdata/'+dictype+'/',
 				    method:'post',
-				    cols: [[
+				    cols: [
 				     	{checkbox: true, fixed: true}
 				      	,{field:'dicName', align:'left', title: '字典名称'}
 				      	,{field:'typeName', align:'left', title: '类型',  sort: true}
 				      	,{field:'dicType', align:'left', title: '类型code',  sort: true}
 				      	,{field:'sortNumber', align:'center', title: '排序',sort: true}
 				      	,{fixed: 'right', width:178, align:'center', toolbar: '#barDemo'}
-				    ]]
+				    ]
 				    ,id: 'testReload'
 				    ,page: true
 				});
