--- a/corpdata-biz/src/main/resources/templates/system/org/user/project_user_sel.html
+++ b/corpdata-biz/src/main/resources/templates/system/org/user/project_user_sel.html
@@ -92,12 +92,14 @@
 					id:'dg_user',
 				    elem: '#LAY_table_user',
 				    url: '/orguser/projectfind/',
-				    cols: [[
-				      {checkbox: true, fixed: true}
-				      ,{field:'userid', align:'left', title: '登录名'}
-				      ,{field:'userName', align:'left', title: '中文名',  sort: true}
-				      ,{field:'sortNumber', align:'center', title: '排序'}
-				    ]] 
+				    cols: [
+				        [
+						  {checkbox: true, fixed: true}
+						  ,{field:'userid', align:'left', title: '登录名'}
+						  ,{field:'userName', align:'left', title: '中文名',  sort: true}
+						  ,{field:'sortNumber', align:'center', title: '排序'}
+				    	]
+					]
 					,where: {
 						memberid: memberid
 				     }
