--- a/corpdata-app/src/main/resources/templates/system/menu/menu_list.html
+++ b/corpdata-app/src/main/resources/templates/system/menu/menu_list.html
@@ -62,6 +62,11 @@
             });
         }
 
+        function toEdit(id){
+            $('#win').window({ width:620,height:415,modal:true,title:'编辑菜单'});
+            $('#win').html("<iframe height='370px' width='100%' frameborder='0' src='/system/menu/edit/"+id+"'></iframe>");
+        }
+
         function openPage(){
             $('#win').window({ width:620,height:415,modal:true,title:'新增菜单'});
             $('#win').html("<iframe height='370px' width='100%' frameborder='0' src='/system/menu/add'></iframe>");
