--- a/corpdata-app/src/main/resources/templates/common/generator/Mapper.java.vm
+++ b/corpdata-app/src/main/resources/templates/common/generator/Mapper.java.vm
@@ -1,7 +1,7 @@
 package ${package}.dao;
 
 import ${package}.entity.${className};
-import com.corpdata.core.base.BaseMapper;
+import com.cpda.core.base.BaseMapper;
 
 /**
  * ${comments} 持久层接口
