--- a/corpdata-app/src/main/resources/templates/common/generator/Service.java.vm
+++ b/corpdata-app/src/main/resources/templates/common/generator/Service.java.vm
@@ -1,7 +1,7 @@
 package ${package}.service;
 
 import ${package}.entity.${className};
-import com.corpdata.core.base.BaseService;
+import com.cpda.core.base.BaseService;
 
 /**
  * ${comments}
