--- a/corpdata-app/src/main/resources/templates/common/generator/ServiceImpl.java.vm
+++ b/corpdata-app/src/main/resources/templates/common/generator/ServiceImpl.java.vm
@@ -2,8 +2,7 @@ package ${package}.service.impl;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
-import com.corpdata.core.base.AbstractBaseService;
+import com.cpda.core.base.AbstractBaseService;
 import ${package}.dao.${className}Mapper;
 import ${package}.entity.${className};
 import ${package}.service.${className}Service;
@@ -16,7 +15,6 @@ import ${package}.service.${className}Service;
  * @date ${datetime}
  */
 @Service
-@Transactional
 public class ${className}ServiceImpl extends AbstractBaseService<${className}> implements ${className}Service {
 	
 }
