--- a/corpdata-app/src/main/resources/templates/common/generator/entity.java.vm
+++ b/corpdata-app/src/main/resources/templates/common/generator/entity.java.vm
@@ -1,6 +1,6 @@
 package ${package}.entity;
 
-import com.cpda.core.base.BaseEntity;
+import com.cpda.common.base.BaseEntity;
 #if(${hasBigDecimal})
 import java.math.BigDecimal;
 #end
