--- a/corpdata-app/src/main/resources/templates/system/index.html
+++ b/corpdata-app/src/main/resources/templates/system/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
     <head>
         <meta charset="UTF-8">
         <title>系统管理</title>
@@ -134,7 +134,8 @@
                                 </div>
                             </li>
                             <li class="user">
-                                <span class="user-icon"><img src="/images/favicon.jpg"/></span>管理员
+                                <span class="user-icon"><img src="/images/favicon.jpg"/></span>
+                                <shiro:principal property="userName"/>
                             </li>
                         </ul>
                     </div>
