--- a/corpdata-app/src/main/resources/templates/system/menu/menu_list.html
+++ b/corpdata-app/src/main/resources/templates/system/menu/menu_list.html
@@ -36,7 +36,7 @@
                   ]
                 ],
                 queryParams:{
-                    id:"root"
+                    parentId:0
                 }
             });
 
