--- a/corpdata-app/src/main/resources/templates/common/generator/entity.java.vm
+++ b/corpdata-app/src/main/resources/templates/common/generator/entity.java.vm
@@ -1,6 +1,7 @@
 package ${package}.entity;
 
 import com.cpda.common.base.BaseEntity;
+import java.io.Serializable;
 #if(${hasBigDecimal})
 import java.math.BigDecimal;
 #end
@@ -15,7 +16,7 @@ import java.util.Date;
  * @date ${datetime}
  * 
  */
-public class ${className} extends BaseEntity {
+public class ${className} extends BaseEntity implements Serializable  {
 	private static final long serialVersionUID = 1L;
 #foreach ($column in $columns)
 #if($column.attrname!='id' && $column.attrname!='created' && $column.attrname!='creater' && $column.attrname!='modified' && $column.attrname!='modifier')
